# openswitch-ops-classifierd

./: .gitreview  CMakeLists.txt  groups
include/: ops-classifierd.h  ops-cls-asic-plugin.h
ops-tests/component/: acl_component_test.md  requirements.txt  test_ace_apply.py  test_ace_parameters.py  test_classifierd_ct_ace_apply.py  test_classifierd_ct_ace_parameters.py  test_classifierd_ct_acl_create_delete.py  test_classifierd_ct_acl_ingress_apply.py  test_classifierd_lag_in_acl_docker_l2.py  test_classifierd_lag_in_acl_docker_l3.py  test_mirror_ct_cli.py  test_mirror_ct_rest_custom_validators.py  test_qos_ct_cli.py  test_qos_ct_rest_custom_validators.py
ops-tests/feature/: acl_classifier_common_lib.py  acl_common_test_suite.py  acl_feature_test.md  constants.py  functions.py  test_1switch_2hosts_l2.py  test_1switch_2hosts_l3.py  test_2switch_2hosts_l2.py  test_2switch_2hosts_l3.py  (+46 more)
src/: CMakeLists.txt  classifierd.c  classifierd.h  classifierd_ovsdb_if.c  classifierd_utils.c  ops-classifierd.c
src/qos/util/: CMakeLists.txt  qos_utils.c  qos_utils.h
tests/: test_ct_qos_cli.py  test_ct_qos_rest_custom_validators.py  test_rest_ct_qos_custom_validators.py  test_vtysh_ct_qos_apply_global.py  test_vtysh_ct_qos_apply_port.py  test_vtysh_ct_qos_cli.py  test_vtysh_ct_qos_cos_map.py  test_vtysh_ct_qos_cos_port.py  test_vtysh_ct_qos_dscp_map.py  test_vtysh_ct_qos_dscp_port.py  test_vtysh_ct_qos_queue_profile.py  test_vtysh_ct_qos_queue_statistics.py  test_vtysh_ct_qos_schedule_profile.py  test_vtysh_ct_qos_trust_global.py  test_vtysh_ct_qos_trust_port.py
(+160 files in other folders)
